CREATE TABLE product_provider (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
   created_at TIMESTAMP WITHOUT TIME ZONE,
   created_by VARCHAR(255),
   updated_at TIMESTAMP WITHOUT TIME ZONE,
   updated_by VARCHAR(255),
   provider_type VARCHAR(30) NOT NULL,
   ean_value INTEGER NOT NULL,
   CONSTRAINT pk_product_provider PRIMARY KEY (id)
);