CREATE TABLE product_destiny (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
   created_at TIMESTAMP WITHOUT TIME ZONE,
   created_by VARCHAR(255),
   updated_at TIMESTAMP WITHOUT TIME ZONE,
   updated_by VARCHAR(255),
   min_ean_value INTEGER NOT NULL,
   max_ean_value INTEGER NOT NULL,
   address VARCHAR(200),
   destiny_type VARCHAR(30) NOT NULL,
   CONSTRAINT pk_product_destiny PRIMARY KEY (id)
);
