CREATE TABLE product (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
   created_at TIMESTAMP WITHOUT TIME ZONE,
   created_by VARCHAR(255),
   updated_at TIMESTAMP WITHOUT TIME ZONE,
   updated_by VARCHAR(255),
   name VARCHAR(20) NOT NULL,
   description VARCHAR(200),
   price DOUBLE PRECISION NOT NULL,
   stock BIGINT NOT NULL,
   ean_value INTEGER NOT NULL,
   product_provider_id BIGINT NOT NULL,
   CONSTRAINT pk_product PRIMARY KEY (id)
);

ALTER TABLE product ADD CONSTRAINT FK_PRODUCT_ON_PRODUCT_PROVIDER FOREIGN KEY (product_provider_id) REFERENCES product_provider (id);
